--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,8 @@
         <label>Current MAC</label>
         <input type="text" value="{{ config.2 }}" disabled><br>
         <br>
-        <textarea id="snd"></textarea>
+        <textarea id="activities"></textarea>
+        <textarea id="logs"></textarea>
         <br><br>
         <button type="button" onclick="start();">START</button>
         <button type="button" onclick="stop();">STOP</button>
@@ -22,7 +23,7 @@
                 console.log(error);
                 return null;
             }).then((response) => {
-                var _element = document.getElementById('snd');
+                var _element = document.getElementById('logs');
                 _element.innerHTML += response['message']+"\n";
             });
         };
@@ -33,14 +34,14 @@
                 console.log(error);
                 return null;
             }).then((response) => {
-                var _element = document.getElementById('snd');
+                var _element = document.getElementById('logs');
                 _element.innerHTML += response['message']+"\n";
             });
         };
         var ws = new WebSocket('ws://' + document.domain + ':' + location.port + '/ws');
-        var _element = document.getElementById('snd');
+        var _element = document.getElementById('activities');
         ws.onmessage = function (event) {
-            _element.innerHTML += event.data + "\n";
+            _element.innerHTML = event.data;
         };
         </script>
     </body>
